Basic ui completed

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   shared_preferences: ^2.3.2
   provider: ^6.1.2
   flutter_svg: ^2.0.10+1
+  dropdown_search: ^6.0.1
 
 dev_dependencies:
   flutter_test:
