--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,9 +11,9 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.6
-  device_info_plus: ^10.1.2
+  # device_info_plus: ^10.1.2
   intl: ^0.19.0
-  connectivity_plus: ^6.0.5
+  # connectivity_plus: ^6.0.5
   http: ^1.2.2
   flutter_bloc: ^8.1.6
   flutter_screenutil: ^5.9.3
